SeawolfScriptParser.py
# Generated from SeawolfScript.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class SeawolfScriptParser ( Parser ):

    grammarFileName = "SeawolfScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'print('", "');'", "'='", 
                     "';'", "'['", "']'", "'if'", "'('", "')'", "'else'", 
                     "'while'", "','", "'**'", "'*'", "'/'", "'//'", "'%'", 
                     "'+'", "'-'", "'and'", "'or'", "'not'", "'in'", "'<'", 
                     "'>'", "'<='", "'>='", "'=='", "'<>'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "EXPONENT", 
                      "MUL", "DIV", "FLOOR", "MOD", "ADD", "SUB", "AND", 
                      "OR", "NOT", "IN", "LTHAN", "GTHAN", "LTHANE", "GTHANE", 
                      "EQUAL", "NEQUAL", "ID", "STRING", "INT", "REAL", 
                      "NEWLINE", "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_stat_block = 2
    RULE_expr = 3

    ruleNames =  [ "prog", "stat", "stat_block", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    EXPONENT=15
    MUL=16
    DIV=17
    FLOOR=18
    MOD=19
    ADD=20
    SUB=21
    AND=22
    OR=23
    NOT=24
    IN=25
    LTHAN=26
    GTHAN=27
    LTHANE=28
    GTHANE=29
    EQUAL=30
    NEQUAL=31
    ID=32
    STRING=33
    INT=34
    REAL=35
    NEWLINE=36
    WS=37

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.StatContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.StatContext,i)


        def getRuleIndex(self):
            return SeawolfScriptParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = SeawolfScriptParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 8
            self.match(SeawolfScriptParser.T__0)
            self.state = 10 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 9
                self.stat()
                self.state = 12 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SeawolfScriptParser.T__2) | (1 << SeawolfScriptParser.T__8) | (1 << SeawolfScriptParser.T__12) | (1 << SeawolfScriptParser.ID) | (1 << SeawolfScriptParser.NEWLINE))) != 0)):
                    break

            self.state = 14
            self.match(SeawolfScriptParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SeawolfScriptParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BlankContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(SeawolfScriptParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlank" ):
                listener.enterBlank(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlank" ):
                listener.exitBlank(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlank" ):
                return visitor.visitBlank(self)
            else:
                return visitor.visitChildren(self)


    class AssignMatrixContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SeawolfScriptParser.ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,i)

        def NEWLINE(self):
            return self.getToken(SeawolfScriptParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignMatrix" ):
                listener.enterAssignMatrix(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignMatrix" ):
                listener.exitAssignMatrix(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignMatrix" ):
                return visitor.visitAssignMatrix(self)
            else:
                return visitor.visitChildren(self)


    class WhileContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,0)

        def stat_block(self):
            return self.getTypedRuleContext(SeawolfScriptParser.Stat_blockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)


    class IfContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,0)

        def stat_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.Stat_blockContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.Stat_blockContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)


    class AssignIndexContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SeawolfScriptParser.ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,i)

        def NEWLINE(self):
            return self.getToken(SeawolfScriptParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignIndex" ):
                listener.enterAssignIndex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignIndex" ):
                listener.exitAssignIndex(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignIndex" ):
                return visitor.visitAssignIndex(self)
            else:
                return visitor.visitChildren(self)


    class PrintExprContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(SeawolfScriptParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintExpr" ):
                listener.enterPrintExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintExpr" ):
                listener.exitPrintExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExpr" ):
                return visitor.visitPrintExpr(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SeawolfScriptParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(SeawolfScriptParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = SeawolfScriptParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = SeawolfScriptParser.PrintExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 16
                self.match(SeawolfScriptParser.T__2)
                self.state = 17
                self.expr(0)
                self.state = 18
                self.match(SeawolfScriptParser.T__3)
                self.state = 19
                self.match(SeawolfScriptParser.NEWLINE)
                pass

            elif la_ == 2:
                localctx = SeawolfScriptParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 21
                self.match(SeawolfScriptParser.ID)
                self.state = 22
                self.match(SeawolfScriptParser.T__4)
                self.state = 23
                self.expr(0)
                self.state = 24
                self.match(SeawolfScriptParser.T__5)
                self.state = 25
                self.match(SeawolfScriptParser.NEWLINE)
                pass

            elif la_ == 3:
                localctx = SeawolfScriptParser.AssignIndexContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 27
                self.match(SeawolfScriptParser.ID)
                self.state = 28
                self.match(SeawolfScriptParser.T__6)
                self.state = 29
                self.expr(0)
                self.state = 30
                self.match(SeawolfScriptParser.T__7)
                self.state = 31
                self.match(SeawolfScriptParser.T__4)
                self.state = 32
                self.expr(0)
                self.state = 33
                self.match(SeawolfScriptParser.T__5)
                self.state = 34
                self.match(SeawolfScriptParser.NEWLINE)
                pass

            elif la_ == 4:
                localctx = SeawolfScriptParser.AssignMatrixContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 36
                self.match(SeawolfScriptParser.ID)
                self.state = 37
                self.match(SeawolfScriptParser.T__6)
                self.state = 38
                self.expr(0)
                self.state = 39
                self.match(SeawolfScriptParser.T__7)
                self.state = 40
                self.match(SeawolfScriptParser.T__6)
                self.state = 41
                self.expr(0)
                self.state = 42
                self.match(SeawolfScriptParser.T__7)
                self.state = 43
                self.match(SeawolfScriptParser.T__4)
                self.state = 44
                self.expr(0)
                self.state = 45
                self.match(SeawolfScriptParser.T__5)
                self.state = 46
                self.match(SeawolfScriptParser.NEWLINE)
                pass

            elif la_ == 5:
                localctx = SeawolfScriptParser.IfContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 48
                self.match(SeawolfScriptParser.T__8)
                self.state = 49
                self.match(SeawolfScriptParser.T__9)
                self.state = 50
                self.expr(0)
                self.state = 51
                self.match(SeawolfScriptParser.T__10)
                self.state = 52
                self.match(SeawolfScriptParser.T__0)
                self.state = 53
                self.stat_block()
                self.state = 54
                self.match(SeawolfScriptParser.T__1)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SeawolfScriptParser.T__11:
                    self.state = 55
                    self.match(SeawolfScriptParser.T__11)
                    self.state = 56
                    self.match(SeawolfScriptParser.T__0)
                    self.state = 57
                    self.stat_block()
                    self.state = 58
                    self.match(SeawolfScriptParser.T__1)


                pass

            elif la_ == 6:
                localctx = SeawolfScriptParser.WhileContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 62
                self.match(SeawolfScriptParser.T__12)
                self.state = 63
                self.match(SeawolfScriptParser.T__9)
                self.state = 64
                self.expr(0)
                self.state = 65
                self.match(SeawolfScriptParser.T__10)
                self.state = 66
                self.match(SeawolfScriptParser.T__0)
                self.state = 67
                self.stat_block()
                self.state = 68
                self.match(SeawolfScriptParser.T__1)
                pass

            elif la_ == 7:
                localctx = SeawolfScriptParser.BlankContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 70
                self.match(SeawolfScriptParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Stat_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.StatContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.StatContext,i)


        def getRuleIndex(self):
            return SeawolfScriptParser.RULE_stat_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat_block" ):
                listener.enterStat_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat_block" ):
                listener.exitStat_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat_block" ):
                return visitor.visitStat_block(self)
            else:
                return visitor.visitChildren(self)




    def stat_block(self):

        localctx = SeawolfScriptParser.Stat_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stat_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 73
                self.stat()
                self.state = 76 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SeawolfScriptParser.T__2) | (1 << SeawolfScriptParser.T__8) | (1 << SeawolfScriptParser.T__12) | (1 << SeawolfScriptParser.ID) | (1 << SeawolfScriptParser.NEWLINE))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SeawolfScriptParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class FloorContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloor" ):
                listener.enterFloor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloor" ):
                listener.exitFloor(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloor" ):
                return visitor.visitFloor(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParens" ):
                listener.enterParens(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParens" ):
                listener.exitParens(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class CondContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond" ):
                listener.enterCond(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond" ):
                listener.exitCond(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond" ):
                return visitor.visitCond(self)
            else:
                return visitor.visitChildren(self)


    class ModContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMod" ):
                listener.enterMod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMod" ):
                listener.exitMod(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMod" ):
                return visitor.visitMod(self)
            else:
                return visitor.visitChildren(self)


    class OrContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOr" ):
                listener.enterOr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOr" ):
                listener.exitOr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class ExponentContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExponent" ):
                listener.enterExponent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExponent" ):
                listener.exitExponent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExponent" ):
                return visitor.visitExponent(self)
            else:
                return visitor.visitChildren(self)


    class MulDivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMulDiv" ):
                listener.enterMulDiv(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMulDiv" ):
                listener.exitMulDiv(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDiv" ):
                return visitor.visitMulDiv(self)
            else:
                return visitor.visitChildren(self)


    class AddSubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddSub" ):
                listener.enterAddSub(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddSub" ):
                listener.exitAddSub(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSub" ):
                return visitor.visitAddSub(self)
            else:
                return visitor.visitChildren(self)


    class InContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIn" ):
                listener.enterIn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIn" ):
                listener.exitIn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIn" ):
                return visitor.visitIn(self)
            else:
                return visitor.visitChildren(self)


    class IndexContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndex" ):
                listener.enterIndex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndex" ):
                listener.exitIndex(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndex" ):
                return visitor.visitIndex(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(SeawolfScriptParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(SeawolfScriptParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)


    class ArrayContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray" ):
                listener.enterArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray" ):
                listener.exitArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)


    class NotContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNot" ):
                listener.enterNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNot" ):
                listener.exitNot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNot" ):
                return visitor.visitNot(self)
            else:
                return visitor.visitChildren(self)


    class NegativeContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegative" ):
                listener.enterNegative(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegative" ):
                listener.exitNegative(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNegative" ):
                return visitor.visitNegative(self)
            else:
                return visitor.visitChildren(self)


    class AndContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeawolfScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(SeawolfScriptParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnd" ):
                listener.enterAnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnd" ):
                listener.exitAnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAnd" ):
                return visitor.visitAnd(self)
            else:
                return visitor.visitChildren(self)


    class RealContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REAL(self):
            return self.getToken(SeawolfScriptParser.REAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReal" ):
                listener.enterReal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReal" ):
                listener.exitReal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReal" ):
                return visitor.visitReal(self)
            else:
                return visitor.visitChildren(self)


    class IdContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SeawolfScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(SeawolfScriptParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId" ):
                return visitor.visitId(self)
            else:
                return visitor.visitChildren(self)


